--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
+body{
+  background-image: url('https://png.pngtree.com/background/20210717/original/pngtree-simple-mathematics-subject-for-high-school-9th-grade-geometry-picture-image_1443166.jpg');
+  background-size: cover;
+
+}
+
+
 .App {
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rec {
+  color: blue;
+  border: 1px solid #6747f4;
+  margin: 5px;
+  padding: 10px;
+  
 }
